<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Fitness Ark</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_second" translatable="false">Main Screen</string>
    <string name="action_sign_in_short" translatable="false">Register</string>
    <string name="email" translatable="false">Email</string>
    <string name="minimum_password" translatable="false">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed" translatable="false">Authentication failed, check your email and password or sign up</string>
    <string name="change_email" translatable="false">Change Email</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="send_password_reset_email" translatable="false">Send Password reset email</string>
    <string name="remove_user" translatable="false">Remove user</string>
    <string name="new_pass" translatable="false">New Password</string>
    <string name="title_activity_profile" translatable="false">Firebase</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password" translatable="true">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login" translatable="false">LOGIN</string>
    <string name="btn_link_to_register" translatable="false">Not a member? Get registered on Fitness Ark now!</string>
    <string name="btn_link_to_login" translatable="false">Already registered. Login Me!</string>
    <string name="title_activity_reset_password" translatable="false">ResetPasswordActivity</string>
    <string name="btn_forgot_password" translatable="false">Forgot your password?</string>
    <string name="btn_reset_password" translatable="false">Reset Password</string>
    <string name="btn_back" translatable="false"> Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change" translatable="false">Change</string>
    <string name="btn_send" translatable="false">Send</string>
    <string name="btn_remove" translatable="false">Remove</string>
    <string name="btn_sign_out" translatable="false">Sign Out</string>
    <string name="lbl_forgot_password" translatable="false">Forgot password?</string>
    <string name="forgot_password_msg" translatable="false">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="social_media_button" translatable="false">Social Media </string>
    <string name="reset_password" translatable="false">Reset Password</string>
    <string name="title_activity_main_screen" translatable="false">MainScreen</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="submit" translatable="false">SUBMIT </string>
    <string name="addfriends" translatable="false">ADD FRIENDS</string>
    <string name="invite" translatable="false">INVITE FRIENDS</string>
    <string name="facebook_application_id" translatable="false">1213696545396652</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1213696545396652</string>
    <string name="twitter_consumer_key" translatable="false">vzTm7qk0aRsG7xntW2kTXFSkt</string>
    <string name="twitter_consumer_secret" translatable="false">lhvML8QdCDkVf6ywQwNfRDbDB6IAql9YBqnwwpE0nGIp3FIGEm</string>
    <string name="submit_blog" translatable="false">Submit</string>
    <string name="tittle" translatable="false">Tittle</string>
    <string name="writer" translatable="false">Writer</string>
    <string name="bolg_content" translatable="false">Write Content Here </string>
    <string name="list_demo" translatable="false">List Demo</string>
    <string name="grid_demo" translatable="false">Grid Demo</string>
    <string name="second_list_demo" translatable="false">Second List Demo</string>
    <string name="second_grid_demo" translatable="false">Second Grid Demo</string>
    <string name="ab_list_title" translatable="false">Stories to read</string>
    <string name="ab_grid_title" translatable="false">Offers Zone</string>
    <string name="got_titletext" translatable="false">Who Will Ride The Third Dragon In \'Game Of Thrones\' Season 7?</string>
    <string name="got_image_url" translatable="false">http://cdn.idigitaltimes.com/sites/idigitaltimes.com/files/styles/image_embed/public/2016/04/29/game-thrones-daenerys-dragon-drogon.jpg</string>
    <string name="got_subtext" translatable="false">Game of Thrones season 7 will kick off a new age of Game of Thrones, with the show becoming a true epic fantasy for the first time. Don’t worry, it will remain a high political drama too, but the war between ice and fire isn’t far off now, and Daenerys Targaryen seems destined to lead the fight</string>
    <string name="got_summarytext" translatable="false">You\'ve shown interest in Game of Thrones series</string>
    <string name="ndtv_titletext" translatable="false">Agni 5, India\'s Longest Range Nuclear Capable Missile, Successfully Test Fired: 10 Points</string>
    <string name="ndtv_subtext" translatable="false">Agni-5, India\'s longest range nuclear capable missile, was successfully test fired from the Kalam Island off Odisha coast today by the Defence Research and Development Organisation or DRDO. The intercontinental surface-to-surface ballistic missile, the latest in India\'s \"Agni\" family of medium to intercontinental range missiles, with new technology for navigation and guidance, gives India the strategic depth it needs to contain its enemies, say scientists. Ready to be deployed, the Agni-5 will soon join India\'s military arsenal</string>
    <string name="ndtv_image_url" translatable="false">http://i.ndtvimg.com/i/2016-12/agni-5_650x400_71482721510.jpg</string>
    <string name="ndtv_summarytext" translatable="false">You\'ve shown interest in Nuclear Capable Missles</string>
    <string name="op_titletext" translatable="false">OnePlus releases leather case for OnePlus 3 and 3T</string>
    <string name="op_subtext" translatable="false">OnePlus has released a leather case for the OnePlus 3/3T. Even though there are several cases for the OnePlus 3/3T, this one will offer a premium look for the smartphone. It has textured calfskin leather blend along with a classic matte finish making it easy to clean and also offers a comfortable grip.</string>
    <string name="op_image_url" translatable="false">http://images.fonearena.com/blog/wp-content/uploads/2016/12/OnePlus-3-and-3T-leather-case-1.jpg</string>
    <string name="op_summarytext" translatable="false">You\'ve shown interest in One Plus</string>
    <string name="jet_titletext" translatable="false">Jet Airways Extends Sale, Offers Tickets Starting Rs. 990</string>
    <string name="jet_subtext" translatable="false">Jet Airways has extended its promotional scheme offering fares starting as low as Rs. 990 on select domestic flights under economy class travel. Under Jet Airways\' \"Best Fares Forever\" offer, tickets must be purchased till December 27, 2016, for travel on or after January 4, 2017. \"Tickets must be purchased a minimum of 15 days prior departure,\" the airline said on its website, adding that limited seats are available under the offer on a first come, first serve basis.</string>
    <string name="jet_image_url" translatable="false">http://i.ndtvimg.com/i/2016-11/jet-airways_650x400_51480009251.jpg</string>
    <string name="jet_summarytext" translatable="false">You\'ve shown interest in Jet Airways</string>
    <string name="note5_titletext" translatable="false">Lenovo Vibe K5 Note</string>
    <string name="note5_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/g/4/7/lenovo-k5-note-pa330010in-original-imaekyazjhfqveze.jpeg</string>
    <string name="note5_subtext" translatable="false">Exchange Offer</string>
    <string name="note5_summarytext" translatable="false">From &#8377;11,999</string>
    <string name="on7_titletext" translatable="false">Samsung On7</string>
    <string name="on7_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/c/n/y/samsung-galaxy-on7-sm-g600f-original-imaecqkgfgtmaw2y.jpeg</string>
    <string name="on7_subtext" translatable="false">&#8377;1,200 Off</string>
    <string name="on7_summarytext" translatable="false">Now &#8377;8990</string>
    <string name="pix_titletext" translatable="false">Google Pixel | XL</string>
    <string name="pix_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/6/g/7/google-pixel-m4-original-imaemzzdh3azqsqb.jpeg</string>
    <string name="pix_subtext" translatable="false">Exchange Offer</string>
    <string name="pix_summarytext" translatable="false">From &#8377;57,000</string>
    <string name="i6_titletext" translatable="false">Apple iPhone6</string>
    <string name="i6_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/f/2/j/apple-iphone-6-original-imaeymdqs5gm5xkz.jpeg</string>
    <string name="i6_subtext" translatable="false">&#8377;3,000 Off</string>
    <string name="i6_summarytext" translatable="false">Now &#8377;33990</string>
    <string name="s7_titletext" translatable="false">Samsung Galaxy S7</string>
    <string name="s7_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/7/n/x/samsung-galaxy-s7-na-original-imaegmjszvhghyzc.jpeg</string>
    <string name="s7_subtext" translatable="false">Just &#8377;43,000</string>
    <string name="s7_summarytext" translatable="false">4 GB RAM, 32 GB ROM</string>
    <string name="moto_titletext" translatable="false">Moto Turbo</string>
    <string name="moto_image_url" translatable="false">https://rukminim1.flixcart.com/image/832/832/mobile/c/v/x/motorola-moto-turbo-xt1225-original-imae5fyxgh7qy6ag.jpeg</string>
    <string name="moto_subtext" translatable="false">Exchange Offer</string>
    <string name="moto_summarytext" translatable="false">Now &#8377;31990</string>
    <string name="write_notes" translatable="false">write notes</string>
    <string name="time_ago_now" translatable="false">few moments ago</string>
    <string name="time_ago_full_seconds" translatable="false">%1$d seconds ago</string>
    <string name="time_ago_full_minute" translatable="false">%1$d minute ago</string>
    <string name="time_ago_full_minutes" translatable="false">%1$d minutes ago</string>
    <string name="time_ago_full_hour" translatable="false">%1$d hour ago</string>
    <string name="time_ago_full_hours" translatable="false">%1$d hours ago</string>
    <string name="time_ago_full_yesterday_at" translatable="false">Yesterday at %1$s</string>
    <string name="time_ago_full_days" translatable="false">%1$d days ago</string>
    <string name="time_ago_full_month" translatable="false">%1$d month ago</string>
    <string name="time_ago_full_months" translatable="false">%1$d months ago</string>
    <string name="time_ago_seconds" translatable="false">%1$d sec ago</string>
    <string name="time_ago_minute" translatable="false">%1$d min ago</string>
    <string name="time_ago_minutes" translatable="false">%1$d min ago</string>
    <string name="time_ago_hour" translatable="false">%1$d h ago</string>
    <string name="time_ago_hours" translatable="false">%1$d h ago</string>
    <string name="time_ago_yesterday_at" translatable="false">Yesterday at %1$s</string>
    <string name="add" translatable="false">Add</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="empty" translatable="false">Empty</string>
    <string name="status_default" translatable="false">-</string>
</resources>