<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/blog_image"
        android:src="@drawable/default_2"
        android:scaleType="fitXY"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/namefield">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tittle"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:id="@+id/blog_tittle"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:textAllCaps="false"

            android:maxLines="1"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/namefield">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/writer"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:id="@+id/blog_writer"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:textAllCaps="false"

            android:maxLines="1"
            android:inputType="text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/namefield"
        android:orientation="vertical">


        <EditText
            android:id="@+id/blog_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/bolg_content"
            android:inputType="textMultiLine" />
    </LinearLayout>



            <Button
                android:layout_width="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_height="40dp"
                android:id="@+id/blog_submit"
                android:text="@string/submit_blog"
                />


    </LinearLayout>
</ScrollView>